# ArieoEngine-ThirdParties

./: .gitignore  ArieoPackage.yaml  CMakeLists.txt  arieo_package.json  build_package.cmake  develop_conan_recipes.cmake  install_from_conan.cmake  install_from_gradle.cmake
conan/: conanfile.macos.txt  conanfile.ubuntu.txt  conanfile.windows.txt
conan/recipes/glfw/: conanfile.py
conan/recipes/mimalloc/: conanfile.py
conan/recipes/wamr/: conanfile.py
conan/recipes/wamr/source/: CMakeLists.txt
conan/recipes/wamr/source/debug/: CMakeLists.txt
conan/recipes/wamr/source/release/: CMakeLists.txt
conan/recipes/wasmtime/: conanfile.py
gradle/: README.md  build.gradle.kts  dependencies.gradle.kts  settings.gradle.kts
gradle/gradle/: cmake-config-generator.gradle.kts  tasks.gradle.kts
